--- a/public/style/login.css
+++ b/public/style/login.css
@@ -178,9 +178,9 @@ button{
     height:5vh;
     
   }
-  ul{
+  /* ul{
     height: 60vh;
-  }
+  } */
 
 }
 
